Overflow fix to kill empty scrollbar

--- a/frontend/source/sass/data_explorer.scss
+++ b/frontend/source/sass/data_explorer.scss
@@ -413,7 +413,7 @@ label[for=schedule] {
 
 .table-container {
   width: 100%;
-  overflow-x: scroll;
+  overflow-x: auto;
   clear: both;
 }
 
